--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Protest+Revolution&display=swap');
+        </style>
+   
     <!-- Referenciando hoja de estilos -->
     <link rel="stylesheet" href="style.css">
+    <title>POKEMON</title>
+    
 </head>
-<main>
-<body>
-    <h1>Hola Mundo</h1>
 
+<body>
+    <h1>POKEMON</h1>
+     <main>
     <div class="tarjeta">
         <h2 id="PIKACHU">Pikachu</h2>
         <div class="caja-contenedora">
@@ -54,3 +60,4 @@
 </body>
 </main>
 </html>
+
