--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Protest+Revolution&display=swap');
-        </style>
-   
+    <title>POKEMON</title>
     <!-- Referenciando hoja de estilos -->
     <link rel="stylesheet" href="style.css">
-    <title>POKEMON</title>
-    
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+        </style>
 </head>
 
 <body>
@@ -60,4 +57,3 @@
 </body>
 </main>
 </html>
-
